# emergencymode.news

./: .editorconfig  .gitignore  .pre-commit-config.yaml  .prettierignore  .prettierrc  AGENT.md  AGENTS.md  AGENT_LESSONS.md  CONTRIBUTING.md  LICENSE  MULTI_PLUGIN_RELEASE_PLAN.md  NOTEBOOK_SUMMARY.md  README.md  TROUBLESHOOTING.md  UPDATE_NOTES.md  composer.json  eslint.config.js  jest.config.cjs  jsconfig.json  package-lock.json  package.json  phpunit.xml  pyproject.toml
.devcontainer/: README.md  devcontainer-lock.json  devcontainer.json  setup.sh
.github/: CODEOWNERS  dependabot.yml
.github/agents/: EMFNAgent.agent.md  README.md
.github/instructions/: README.md  copilot-instructions.md  wordpress-plugin.instructions.md
.github/workflows/: ci.yml  codeql.yml  dependency-review.yml  devcontainer.yml  release.yml
dev-tools/: README.md  fips-risk-lookup.html
emergencymode_disaster_risk.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
mu-plugins/: emfn-mu-loader.php
notebooks/: API_ACCESS.md  CA-MX_disaster_risk_analysis.ipynb  FIPS_risk_lookup_dev.ipynb  README.md  US_disaster_risk_analysis.ipynb  action_pack_roundtrip_dev.ipynb  disaster_risk_analysis.ipynb  generate_sample_data.py  shared_setup.py
scripts/: README.md  build-release-assets.sh  check-notebooks-clean.sh  check-tool-upgrades.sh  detect-plugin-changes.sh  generate-version-matrix.sh  get-plugin-version.sh  strip-notebook-outputs.sh  sync-release-version.sh  test-devcontainer-workflow.sh  test-version-logic.sh
tests/: README.md  TESTING_PLAN.md
tests/js/: README.md  (+1 more)
tools/: README.md
(+161 files in other folders)
