[project]
name = "emergencymode-disaster-risk"
description = "Disaster risk projection data analysis for Emergency Mode News"
version = "0.0.3"
requires-python = ">=3.13"
dependencies = [
    "jupyterlab==4.5.7",
    "pandas==3.0.2",
    "requests==2.33.1",
    "numpy==2.4.4",
    "ipykernel==7.2.0",
    "tqdm==4.67.3",
]

[dependency-groups]
dev = [
    "pre-commit==4.6.0",
    "pytest==9.0.3",
]
